# SPDX-License-Identifier: Apache-2.0

CMAKE_MINIMUM_REQUIRED(VERSION 3.5.0)

ADD_SUBDIRECTORY(../../../lib build)

PROJECT(ex_establish_scp03)

ADD_EXECUTABLE(${PROJECT_NAME} main_establish.c ../src/ex_establish_scp03.c)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC se05x_lib)

if(PLUGANDTRUST_DEBUG_LOGS)
    ADD_DEFINITIONS(-DSMLOG_DEBUG_MESSAGES)
ENDIF()


PROJECT(ex_resume_scp03)

ADD_EXECUTABLE(${PROJECT_NAME} main_resume.c ../src/ex_resume_scp03.c)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC se05x_lib)

if(PLUGANDTRUST_DEBUG_LOGS)
    ADD_DEFINITIONS(-DSMLOG_DEBUG_MESSAGES)
ENDIF()



PROJECT(ex_all_scp03)

ADD_EXECUTABLE(${PROJECT_NAME} main.c ../src/ex_resume_scp03.c ../src/ex_establish_scp03.c)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC se05x_lib)

if(PLUGANDTRUST_DEBUG_LOGS)
    ADD_DEFINITIONS(-DSMLOG_DEBUG_MESSAGES)
ENDIF()
